--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "name": "jhernandes/php-itaucripto",
+    "type": "library",
     "description": "Versão em PHP da classe Itaucripto, originalmente escrita em Java",
+    "keywords": ["itaushopline","php-itaucripto","itau"],
+    "homepage": "https://github.com/jhernandes/php-itaucripto",
+    "license": "MIT",
     "require": {
         "php": "^5.3.3 || ^7.0"
     }
