--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Versão em PHP da classe Itaucripto, originalmente escrita em Java",
     "keywords": ["itaushopline","php-itaucripto","itau"],
     "homepage": "https://github.com/jhernandes/php-itaucripto",
+    "minimum-stability": "dev-master",
     "license": "MIT",
     "require": {
         "php": "^5.3.3 || ^7.0"
