--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
     "minimum-stability": "stable",
     "license": "MIT",
     "require": {
-        "php": "^5.3.3 || ^7.0"
+        "php": ">=5.3.0"
     }
 }
