--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Vendor\\Itau": ""
+        }
     }
 }
