--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {
-            "Itau\\": ""
-        }
+    	"files": ["Itaucripto.php"]
     }
 }
