--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-    	"files": ["Itaucripto.php"]
+    	"psr-4": {
+            "Itau\\": "src/"
+        }
     }
 }
